--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Throughout my years on the job market, I found a passion in helping and assisting others to bring their visions to life. I love the process of creating a story, from the worldbuilding to the characters and the plot scheming, but most importantly, I want to bring emotions into the public.<br>
                 Having a spotlight is not what I look for. I like to work in the shadows. My goal is simply to be part of something greater than me. Maybe your project ! *wink*
             </p>
-            <p class="home-section-button">Learn More <i class="ph ph-arrow-right"></i></p>
+            <div class="home-section-button"><p>Learn More</p> <i class="ph ph-arrow-right"></i></div>
         </div>
     </section>
 
@@ -90,7 +90,7 @@
                 <p class="home-portfolio-text-header">Featured projects</p>
                 <p class="home-portfolio-text-content">
                     Here are the released projects I have worked on before.<br>They were made with or for other people.</p>
-                <p class="home-section-button">Take a look <i class="ph ph-arrow-right"></i></p>
+                <div class="home-section-button"><p>Take a look </p><i class="ph ph-arrow-right"></i></div>
             </div>
         </div>
     </section>
@@ -100,7 +100,7 @@
                 <p class="home-portfolio-text-header">Ghost projects</p>
                 <p class="home-portfolio-text-content">
                     I also have some unpublished pieces. Feel free to check them and see my writing style.</p>
-                <p class="home-section-button">Take a look <i class="ph ph-arrow-right"></i></p>
+                <div class="home-section-button"><p>Take a look</p> <i class="ph ph-arrow-right"></i></div>
             </div>
             <div class="home-personal-portfolio-slideshow">
                 <img src="images/ghost-project-1.jpg" alt="Ghost Project">
