--- a/resume.html
+++ b/resume.html
@@ -86,6 +86,92 @@
             </div>
         </div>
     </section>
+
+    <section class="language-section">
+        <div class="language-container">
+            <div class="language-section-header">
+                <p class="language-section-header-text">Languages</p>
+            </div>
+            <div class="languages-list">
+                <div class="language french">
+                    <img src="images/french_icon.avif" alt="French Logo">
+                    <p>French</p>
+                </div>
+                <div class="language english">
+                    <img src="images/english.avif" alt="English Logo">
+                    <p>English</p>
+                </div>
+                <div class="language malagasy">
+                    <img src="images/malagasy_icon.avif" alt="Malagasy Logo">
+                    <p>Malagasy</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="timeline">
+        <div class="timeline-header">
+            <p>Experiences</p>
+        </div>
+        <div class="cards-timeline">
+            <div class="card-container left-container">
+                <div class="date">
+                    <p>2025</p>
+                    <p>2023</p>
+                </div>
+                <div class="card-text-box card-text-box-1">
+                    <p class="card-text-company">Freelance / Remote</p>
+                    <p class="card-text-job">Ghostwriting</p>
+                    <p class="card-text-about">For a client, I worked on a sci-fi trilogy and a non-fiction book. I did the conception as well as writing the manuscript. They are currently available on every platform.</p>
+                </div>
+            </div>
+            <div class="card-container right-container">
+                <div class="date">
+                    <p>2025</p>
+                    <p>2023</p>
+                </div>
+                <div class="card-text-box card-text-box-2">
+                    <p class="card-text-company">Skoleom France / Remote</p>
+                    <p class="card-text-job">Proofreader & Book designer</p>
+                    <p class="card-text-about">I review, edit and design the books in the Skoleom Editions.</p>
+                </div>
+            </div>
+            <div class="card-container left-container">
+                <div class="date">
+                    <p>2023</p>
+                </div>
+                <div class="card-text-box card-text-box-3">
+                    <p class="card-text-company">Maullywood Mauritius / Remote</p>
+                    <p class="card-text-job">Script dubbing</p>
+                    <p class="card-text-about">I worked as a dubbing script adapter for Maullywood. We did various TV drama that were broadcast on Canal Plus.</p>
+                </div>
+            </div>
+            <div class="card-container right-container">
+                <div class="date">
+                    <p>2022</p>
+                    <p>2023</p>
+                </div>
+                <div class="card-text-box card-text-box-4">
+                    <p class="card-text-company">Sarycom Films / Madagascar</p>
+                    <p class="card-text-job">Script supervisor</p>
+                    <p class="card-text-about">I worked for Sarycom Films on 3 different series broadcast on Canal Plus. First as an intern, and then as the script supervisor.</p>
+                </div>
+            </div>
+            <div class="card-container left-container">
+                <div class="date">
+                    <p>2021</p>
+                </div>
+                <div class="card-text-box card-text-box-5">
+                    <p class="card-text-company">E-Media / Madagascar</p>
+                    <p class="card-text-job">Writer/Director (student)</p>
+                    <p class="card-text-about">I wrote and directed a documentary report for my bachelor thesis on the theme of "Social representation of the use of solar energy in Antananarivo."</p>
+                </div>
+            </div>
+        </div>
+        
+      
+    </section>
+
     <div id="footer"></div>  
 
     <script src="js/script.js">
