resume base complete

--- a/resume.html
+++ b/resume.html
@@ -171,6 +171,23 @@
         
       
     </section>
+    <section class="education">
+        <p class="education-header">Education</p>
+        <div class="education-list">
+            <div class="education-item ed-1">
+                <p class="education-item-header">French high school diploma in Economics and Social Science</p>
+                <p class="education-item-school">June 2018 at BIRD Ambohimiandra (Antananarivo)
+                </p>
+            </div>
+            <div class="education-item ed-2">
+                <p class="education-item-header">Bachelor in Audiovisual and Digital Communication</p>
+                <p class="education-item-school">December 2021 at E-Media (Madagascar)</p>
+            </div>
+        </div>
+    </section>
+    <section class="resume">
+        <a class="resume-link" href="#resume">Download my resume in PDF</a>
+    </section>
 
     <div id="footer"></div>  
 
