--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/duotone/style.css"
+    />
 </head>
 <body>
     <div id="header"></div>  
@@ -106,6 +111,9 @@
                 <img src="images/ghost-project-1.jpg" alt="Ghost Project">
             </div>            
     </section>
+    
+
+    
 
     <div id="footer"></div>  
 
