--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@
                 </div>
             
                 <div class="service-item">
-                    <p class="service-header">Sscreenplay</p>
+                    <p class="service-header">Screenplay</p>
                     <ul class="service-list">
                         <li>
                             <i class="ph-duotone ph-check-circle"></i>
