home hero changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="home-hero">
         <div class="home-hero-text">
-            <p class="home-hero-text-header">I will be the shadow of your <span class="home-hero-text-header-span">light</span></p>
+            <p class="home-hero-text-header">Let's write <span class="home-hero-text-header-span">your story</span> together</p>
             <p class="home-hero-text-description">Do you want to bring your story to life? It all starts with your idea… and a little bit of my help. 
                 Because a good shadow can only make your light shine brighter.</p>
         </div>
