complete services page

--- a/services.html
+++ b/services.html
@@ -38,6 +38,9 @@
                 <li class="service-nav-3 service-nav">Assistantship</li>
             </ul>
         </div>
+        <i class="ph ph-feather feather-one"></i>
+        <i class="ph ph-feather feather-two"></i>
+        <i class="ph ph-feather feather-three"></i>
     </section>
     <section class="services-creative-writing service-section service-section-one active">
         <div class="writing-part-one">
@@ -190,6 +193,7 @@
     </section>
     <section class="resume">
         <a class="resume-link" href="#resume">Download terms of service</a>
+        <i class="ph ph-feather feather-four"></i>
     </section>
 
     <div id="footer"></div>  
