complete base form

--- a/work.html
+++ b/work.html
@@ -187,20 +187,18 @@
     <div class="modal" id="modal">
         <div class="modal-content">
           <span class="modal-close"><i class="ph ph-x"></i></span>
-          <p class="box-main-title"></p>
-          <p class="box-type"></p>
+          <div class="modal-head">
+            <p class="modal-main-title"></p>
+            <p class="modal-box-type"></p>
+          </div>
           <p class="box-content">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Eius nulla, dolore ullam illum, dolores, ut eos sequi voluptatem accusantium delectus quis. 
             Recusandae laudantium earum quisquam veniam nulla nobis eius id ullam ex modi. 
             At voluptatum laboriosam adipisci quibusdam. 
-            Quis voluptatibus consequuntur voluptatum repudiandae, tenetur, fuga nobis quisquam harum, 
-            corrupti neque quidem minima dolor necessitatibus quos provident dolorum perferendis eum tempore? 
-            Nostrum, possimus maiores laboriosam dolorem harum ad, 
-            officiis sapiente tenetur laudantium rerum iure officia ea totam quae, 
-            dolores deserunt. Sunt itaque quia expedita dolore error accusamus maiores assumenda impedit praesentium, 
             iste delectus, laboriosam, et explicabo eaque quae illum neque magnam.
           </p>
+          <div class="workbutton"><p>Read</p> <i class="ph ph-arrow-right"></i></div>
         </div>
     </div>
       
